# xpdtools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
src/xpdtools/: __init__.py  flyers.py  motors.py  plans.py  profile_xpdd.py  utils.py
src/xpdtools/detectors/: __init__.py  panda.py  pilatus4.py  utils.py
src/xpdtools/panda_configurations/: __init__.py  single_axis_flyscan.yaml
src/xpdtools/profiles/: default.py  xpdd.py
tests/: conftest.py  test_flyers.py  test_motors.py  test_plans.py  test_utils.py
