[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "xpdtools"
authors = [
  { name = "Brookhaven National Laboratory", email = "jwlodek@bnl.gov" },
]
description = "Tools for NSLS-II XPD beamline"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "bluesky>=1.15.1",
  "bluesky-tiled-plugins>=2.0.6",
  "ipython>=9.15.0",
  "nslsii>=0.11.9",
  "ophyd-async[ca,pva] @ git+https://github.com/bluesky/ophyd-async@main",
  "redis-json-dict>=0.2.2",
  "rich>=15.0.0",
  "tiled[client]>=0.2.12",
]

[dependency-groups]
dev = [
    "ophyd-async[ca, pva, sim] @ git+https://github.com/bluesky/ophyd-async@main",
    "inflection",
    "import-linter",
    "numpydoc",
    "pickleshare",
    "pipdeptree",
    "pre-commit",
    "pyepics>=3.4.2",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-faulthandler",
    "pytest-mock",
    "pytest-forked",
    "pytest-insubprocess",
    "pytest-rerunfailures",
    "pytest-timeout",
    "ruff",
    "scanspec>=1.0a1",
    "types-mock",
    "types-pyyaml",
    "tiled[client,server]>=0.2.9",
    "bluesky-tiled-plugins>=2.0.2",
    "h5py>=3.16.0",
    "ty>=0.0.57",
]
docs = [
    "pydata-sphinx-theme>=0.12",
    "myst-parser",
    "sphinx-autobuild",
    "sphinx-autodoc2",
    "sphinxcontrib-mermaid",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.scripts]
xpd-profile = "xpdtools:start_profile"

[project.urls]
Homepage = "https://github.com/NSLS2/xpdtools"
Issues = "https://github.com/NSLS2/xpdtools/issues"
Discussions = "https://github.com/NSLS2/xpdtools/discussions"
Changelog = "https://github.com/NSLS2/xpdtools/releases"

[project.optional-dependencies]
profiles = [
    "qtpy>=2.4.3",
]

[tool.setuptools_scm]
write_to = "src/xpdtools/_version.py"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = false  # Ignore missing stubs in imported modules


[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --strict-markers --doctest-modules
    --doctest-glob="*.rst" --doctest-glob="*.md"
    --ignore=docs/examples --ignore=src/xpdtools/profiles
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = [
    "error",
    "ignore:tagMap is deprecated:DeprecationWarning:ldap3",
    "ignore:typeMap is deprecated:DeprecationWarning:ldap3",
]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
log_format = "%(asctime)s,%(msecs)03d %(levelname)s (%(threadName)s) %(message)s"
log_date_format = "%H:%M:%S"

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 60

[tool.coverage.run]
patch = ["subprocess"]
data_file = "/tmp/xpdtools.coverage"
# branch = true

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

[tool.ruff]
line-length = 88
lint.select = [
    "B",       # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",      # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",       # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",       # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "N",       # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "W",       # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",       # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP",      # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SLF",     # self - https://docs.astral.sh/ruff/settings/#lintflake8-self
    "PLC2701", # private import - https://docs.astral.sh/ruff/rules/import-private-name/
    "LOG015",  # root logger call - https://docs.astral.sh/ruff/rules/root-logger-call/
    "S101",    # assert - https://docs.astral.sh/ruff/rules/assert/
    "D",       # docstring - https://docs.astral.sh/ruff/rules/#pydocstyle-d
]
lint.ignore = [
    "B901", # Return in a generator is needed for plans
    "D107", # We squash __init__ docstrings into the class docstring
    "D102", # We don't need to override docstrings that are inherited from abstract methods
]
lint.preview = true # so that preview mode PLC2701 is enabled

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# By default, private member access is allowed in tests
# See https://github.com/DiamondLightSource/python-copier-template/issues/154
# Remove this line to forbid private member access in tests
"tests/**/*" = ["SLF001", "S101", "D"]
"src/xpdtools/profiles/**" = ["F401"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
# We often shorten "Annotated" to "A" for brevity
"typing.Annotated" = "A"

[tool.ruff.lint.pep8-naming]
# The fixture RE is commonly used in tests
extend-ignore-names = ["RE"]

[tool.importlinter]
root_package = "xpdtools"

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine >= 'manylinux_2_28_x86_64'"
]